# jobscout

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  COOLIFY.md  DOCKER.md  Dockerfile.api  Dockerfile.web  Dockerfile.worker  Makefile  README.md  RUBRIC.md  SPEC.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  prompt_guardrail.md  prompt_guardrail.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scoring_weights.yml  skills_profile.json  truth_bank.yml
.github/workflows/: ci.yml
apps/api/: README.md
apps/api/app/: __init__.py  dependencies.py  main.py
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/worker/: README.md
apps/worker/worker/: __init__.py  jobs.py  main.py  queue.py
docs/: AGENT_SESSION_PROTOCOL.md  INVARIANTS.md  MCP_LOCAL_DESIGN.md  NOW.md  PERSISTENT_AGENT_WORKFLOW.md  PROJECT_CONTEXT.md  Repo_Structure.md  SESSION_NOTES.md  SPRINT_PLAN.md
handoffkit/: __main__.py  handoffkit.config.json
handoffkit/templates/: architect.md  coder.md  polish.md  qa_tester.md  reviewer.md
infra/: README.md
infra/migrations/: README.md  env.py
infra/migrations/versions/: 20260218_0001_initial_schema.py  20260218_0002_job_tracking_fields.py  20260220_0003_uniqueness_constraints.py  (+1 more)
tests/api/: conftest.py  test_health.py  test_sources_and_inbox.py
tests/infra/: test_migrations.py
tests/worker/: test_hello_job.py  test_ingest_adapters.py  test_ingest_pipeline.py  test_pack_pipeline.py  test_scheduler_pipeline.py  test_scoring_pipeline.py
(+29 files in other folders)
